--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
 						Transferência via PIX
 					</h2> 
 					<p class="presente-detail">
-						Você pode fazer uma transferência via PIX. Acesse o link e tenha mais informações da conta</br> <a href="https://nubank.com.br/pagar/98m9/GSV6OntZi3">PIX NUBANK</a>
+						Você pode fazer uma transferência via PIX. Acesse o link e tenha mais informações da conta 
 					</p> 
+				</br>
+					<a href="https://nubank.com.br/pagar/98m9/GSV6OntZi3">
+						<button type="button" class="btn botao_nu btn-lg mg_top">PIX NUBANK</button>
+					</a>
 
 				</div> 
 
@@ -104,8 +108,12 @@
 						Casa dos presentes
 					</h2> 
 					<p class="presente-detail">
-						Direto na loja em: Rua Júlio Mesquita, 526 - Centro, Araras - SP, 13600-060 </br><a href="https://lista.casadospresentes.net/lista/ver/2510">Ou online pelo site</a>
+						<b>Direto na loja em:</b> Rua Júlio Mesquita, 526 - Centro, Araras - SP, 13600-060, <b>ou online pelo site</b>
 					</p>
+				</br>
+					<a href="https://lista.casadospresentes.net/lista/ver/2510">
+						<button type="button" class="btn btn-primary btn-lg mg_top">LISTA ONLINE</button>
+					</a>
 				</div> 
 			</div> 
 		</div> 
@@ -171,9 +179,9 @@
 	<section class="note purple">
 		<div class="container section-wrapper text-center">
 			<p class="quote">
-				“Frase bonita que camila vai escrever”
+				E, acima de tudo, tenham amor, pois o amor une perfeitamente todas as coisas
 			</p> 
-			<div class="quoter">Camila Campagnollo</div>
+			<div class="quoter">Colossenses 3:14 - NTLH</div>
 		</div> 
 	</section> 
 	
