--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<div class="col-md-8 col-sm-12">
 					<p class="confirmar-detail">
-						Envie mensagem para a Rosana confirmando a presença. Escanei o QR code ou acesse pelo botão abaixo para iniciar uma conversa.
+						Envie mensagem para a Rosana confirmando a presença <b>até dia 31/Agosto</b>. Escanei o QR code ou acesse pelo botão abaixo para iniciar uma conversa.
 					</p> 
 
 					<a href="https://wa.me/5519999322497?text=Olá Gostaria de confirmar presença no casamento Gerson e Camila - 23 set">
