--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="header-table">
 				<div class="header-wrapper">
 					<h1 class="header-title">
-						Gerson ❤ Camila
+						Gerson e Camila
 					</h1>
 					<p class="header-subtitle">
 						23 Setembro 2023 - 16h
@@ -175,14 +175,28 @@
 		</div> 
 	</section> 
 
+	<!-- Testimonial -->
+	<section class="testimonial">
+		<div class="container section-wrapper">
+			<div class="section-title">
+				<br/>
+				<br/>
+				<br/><br/>
+			</div> <!-- /.section-title -->
+			<div class="owl-carousel testimonial-owl">
+				<div class="item">
+					<p class="quote">
+						E, acima de tudo, tenham amor, pois o amor une perfeitamente todas as coisas
+					</p> 
+					<div class="quoter">Colossenses 3:14 - NTLH</div>
+				</div> <!-- /.item -->
+			</div> <!-- /.owl-carousel -->
+		</div> <!-- /.container -->
+	</section> <!-- /.testimonial -->
 
 	<section class="note purple">
-		<div class="container section-wrapper text-center">
-			<p class="quote">
-				E, acima de tudo, tenham amor, pois o amor une perfeitamente todas as coisas
-			</p> 
-			<div class="quoter">Colossenses 3:14 - NTLH</div>
-		</div> 
+
+
 	</section> 
 	
 
