--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 		   
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#header">home</a></li>
+						
 						<li><a href="#confirmar">Confirmar presença</a></li>
 						<li><a href="#presente">Lista de presentes</a></li>
+						<li><a href="#team">Fotos Pré Wedding</a></li>
 						<li><a href="#cerimonia">Cerimônia</a></li>
 						<li><a href="#festa">Festa</a></li>
+						<li><a href="#message-form">Mensagem</a></li>
 					</ul> 
 			    </div>
 		  	</div>
@@ -119,6 +121,23 @@
 		</div> 
 	</section> 
 
+	<section class="team" id="team">
+		<div class="container section-wrapper">
+			<h2 class="section-title black">
+				Fotos Pré Wedding
+			</h2> <!-- /.section-title -->
+			<div class="underline purple"></div>
+			<div class="row">
+				<div class="col-centered">
+					<div class="team-item">
+						<a href="https://www.jonathanjanuario.com.br/portfolio/blog/1204480-gerson-e-camila" target="_blank">
+							<img src="assets/images/pre.png" alt="team-image" class="team-img">
+						</a>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+			</div>
+		</div>
+	</section>
 
 
 	<section class="cerimonia" id="cerimonia">
@@ -194,6 +213,7 @@
 		</div> <!-- /.container -->
 	</section> <!-- /.testimonial -->
 
+	<section class="message-form" id="message-form">
 	<div class="container">
 		<div class="row ">
 			<div class="col-centered" >
@@ -201,6 +221,7 @@
 			</div>
 		</div>
 	</div> 
+</section>
 	
 
 
